# 1D-Cellular-Automata

./: .gitignore  Cargo.toml  README.md  index.html  style.css
src/: main.rs
