[package]
name = "cellular-automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = "0.3.61"
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8"
js-sys = "0.3.61"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.84"
